[workspace]
resolver = "3"
members = [
    "setty",
    "setty-derive",
    "examples/deprecation",
    "examples/env",
    "examples/jsonschema",
    "examples/toml",
    "examples/validate",
]
default-members = ["setty", "setty-derive"]


[workspace.package]
version = "1.2.0"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/kamu-data/setty"
repository = "https://github.com/kamu-data/setty"
documentation = "https://docs.rs/setty"
categories = ["config"]
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["configuration"]
include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]


[workspace.lints.clippy]
# clippy::all (clippy::сorrectness, clippy::suspicious, clippy::style, clippy::complexity, clippy::perf)
new_without_default = "allow"
too_many_arguments = "allow"
module_inception = "allow"

# clippy::pedantic
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
wildcard_imports = "allow"


# clippy::cargo
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }


[workspace.dependencies]
setty = { path = "setty", version = "1.0.0" }
setty-derive = { path = "setty-derive", version = "1.0.0" }
